fix: SP-4717 Fixed misaligned icon in mobile for "draw another area button" in the selection toolbar

--- a/frontend/soilhive-app/src/styles/SoilhiveMap.scss
+++ b/frontend/soilhive-app/src/styles/SoilhiveMap.scss
@@ -320,9 +320,11 @@
         flex-basis: 100%;
         height: 0;
       }
-      .break,
-      .draw-another-button-mobile {
+      .break {
         display: block;
+      }
+      .draw-another-button-mobile {
+        display: flex;
       }
     }
     .reset-button svg {
